--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,27 +64,29 @@ section {
 
 /*STYLE OF BACKGROUND IMAGE*/
 #home {
-    background: url(../img/home.jpg) no-repeat center center; /*Full Witdth background image*/
-    padding: 0;
+    background: url(../img/csc_long.jpg) no-repeat center/60%; /*Full Witdth background image*/;
+    padding-top: 50px;
+    /*
     -webkit-background-size: cover;
     background-size: cover;
-    -moz-background-size: cover;
+    -moz-background-size: cover;*/
     min-height: 600px;
 }
     /*STYLE FOR OVERLAY CLASS - WHICH IS ABOVE IMAGE WITH OPACITY/TRANSPARENCY 0.75*/
-    #home .overlay {
+    /*#home .overlay {
         padding-top: 90px;
         background-color: rgba(35, 133, 161,0.75); /*.75 opacity of the color so that background image is visible*/
-        min-height: 600px;
+        /*min-height: 600px;
         color: #fff;
-    }
+    }*/
 
-    #home h1 {
+
+    /*#home h1 {
         padding-top: 80px;
         font-weight: 900;
         font-size: 100px;
         font-family: 'Browallia New';
-    }
+    }*/
 /*SMPLE CLASS TO ADJUST SECTION PADDING & HEIGHT*/
 
 /*CLASS TO FORMAT TEXT*/
