--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,11 @@ section {
     }
 
 .navbar-brand {
-    padding: 0px;
+    padding:0px;
+}
+.navbar-brand img{
+    max-height:40px;
+    padding-top: 5px
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color:#fff;
